			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04o: *********************************

IMP: (5/25/06, RK) NCC: add test for "forceWireMatch" to regression suite

IMP/MAN: (5/25/06, SMR) "Layers and Patterns" preferences has "Factory Reset" (Bug #1037).

IMP: (5/25/06, RK) NCC: Remove  print statements I put in for debugging Bugzilla# 969.

IMP/MAN: (5/25/06, GVG) Workaround for KeyBindings in EToolBarRadioButton for MacOSX (Bug #1056).
Problem: JRadioButtonMenuItem doesn't handle accelerators well. In case of Command-S and S in two different
functions, JRadioButtonMenuItem assumes are identical and a conflict is generated. Temporary workaround:
Switch from JRadioButtonMenuItem to JMenuItem for EToolBarRadioButton on MacOSX. Thus the accelerators will
be displayed and user can use toolbar icons to know what is selected.

IMP: (5/24/06, RK) Improvements to NCC GUI user manual

IMP/MAN: (5/24/06, GVG) List User Preferences in HelpMenu.

IMP/MAN: (5/23/06, GVG) Accelerators in ToolTip text of ToolBar buttons.

BUG: (5/23/06, SMR) Smooth zooming can crash (Bug #1054)
FIX: In ZoomAndPanListener.mouseDragged(), prevent negative scale.

BUG: (5/23/06, SMR) Mimic stitching doesn't show all cases when running interactively (Bug #1048).
FIX: In MimicStitch.MimicDialog, run new dialogs without redisplay.

BUG: (5/23/06, SMR) GDS Input ignores illegal export names (Bug #1044).
FIX: In Export.newInstance(), mangle illegal names before rejecting.

BUG: (5/23/06, DN) Electric doesn't display anything after the language assertion error (Bug #1054).
FIX: EditWindow.setScale throws IllegalArgumentException when scal is negative.
     RenderJob.doIt clears "runningNow" in finally block.

IMP: (5/23/06, GVG) Extra messages for Spice netlister export (Bug #1046, tail file appending).

BUG: (5/23/06, SMR) Waveform measurement doesn't display small numbers (Bug #1004).